--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <titel>Habibullah Habib</titel>
+
+  </head>
 <body>
-<titel>Habibullah Habib</titel>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
